[tool.poetry]
authors = ["Chameleon <contact@chameleoncloud.org>"]
description = "Chameleon on-demand tunnel provisioning service"
name = "tunelo"
version = "0.0.1"
include = ["etc/tunelo"]
exclude = ["tunelo/tests"]

# All dependencies should be at minimum the value of the upper constraint
# for the targeted OpenStack release. These values are for the Train cycle:
# https://github.com/openstack/requirements/blob/stable/train/upper-constraints.txt
[tool.poetry.dependencies]
# Kolla containers currently use 3.6, this can eventually be updated to 3.8
python = "^3.6"
Flask = "^1.1.1"
importlib-metadata = { version = "^0.20", python = "<3.7" }
"oslo.config" = "^6.11.3"
"oslo.log" = "^3.44.3"
osprofiler = "^2.8.2"
"oslo.service" = "^1.40.2"
"oslo.messaging" = "^10.2.3"
"oslo.middleware" = "^3.38.1"
keystonemiddleware = "^9.4.0"
"oslo.policy" = "^2.3.4"
"oslo.reports" = "^1.30.0"
futurist = "^1.9.0"
"oslo.rootwrap" = "^5.16.1"
python-neutronclient = "^6.14.1"
jsonschema = "^3.0.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.2.2"
oslotest = "^4.4.1"
pytest-watch = "^4.2.0"
pytest-mock = "^3.5.1"
flake8-bugbear = "^21.3.2"
isort = "^5.8.0"
pydocstyle = "^6.0.0"

[tool.poetry.scripts]
tunelo-api = "tunelo.cmd.api:main"
tunelo-rootwrap = "oslo_rootwrap.cmd:main"

[tool.poetry.plugins."oslo.config.opts"]
tunelo = "tunelo.conf.opts:list_opts"

[tool.poetry.plugins."oslo.config.opts.defaults"]
tunelo = "tunelo.conf.opts:update_opt_defaults"

[tool.poetry.plugins."oslo.policy.enforcer"]
tunelo = "tunelo.common.policy:get_oslo_policy_enforcer"

[tool.poetry.plugins."oslo.policy.policies"]
"tunelo.api" = "tunelo.common.policy:list_policies"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
# Set line length explicitly.
# See https://black.readthedocs.io/en/stable/the_black_code_style.html#line-length for more details
line-length = 88

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.isort]
known_first_party = "tunelo"
